--- a/oishii/OiSHii/AndroidManifest.xml
+++ b/oishii/OiSHii/AndroidManifest.xml
@@ -26,6 +26,12 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar">
         </activity>
+        <activity
+            android:name=".Home"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
     </application>
 
 </manifest>
