--- a/oishii/OiSHii/AndroidManifest.xml
+++ b/oishii/OiSHii/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:name=".CreateAccount"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
