--- a/oishii/OiSHii/AndroidManifest.xml
+++ b/oishii/OiSHii/AndroidManifest.xml
@@ -78,6 +78,12 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
+         <activity
+            android:name=".History"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
         
     </application>
 
