--- a/oishii/OiSHii/AndroidManifest.xml
+++ b/oishii/OiSHii/AndroidManifest.xml
@@ -115,6 +115,19 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
+        <activity
+            android:name=".PromoCode"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" 
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+         <activity
+            android:name=".DeliveryTime"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
         
     </application>
 
