--- a/oishii/OiSHii/AndroidManifest.xml
+++ b/oishii/OiSHii/AndroidManifest.xml
@@ -134,6 +134,7 @@
             android:name=".CheckoutFinal"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         
