--- a/oishii/OiSHii/AndroidManifest.xml
+++ b/oishii/OiSHii/AndroidManifest.xml
@@ -126,15 +126,18 @@
         </activity>
          <activity
             android:name=".DeliveryTime"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
          <activity
             android:name=".CheckoutFinal"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+         <activity
+            android:name=".MenuItemGallery"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         
